--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'es',
         'es:es-transport',
         'es:es-discovery-ec2',
         'es:es-repository-s3',
+        'es:es-repository-hdfs',
         'testing',
         'core',
         'blob',
@@ -14,7 +15,6 @@ include 'es',
         'udc',
         'azure-discovery',
         'dns-discovery',
-        'es-repository-hdfs',
         'sigar',
         'app',
         'blackbox'
