--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -46,7 +46,7 @@ allprojects {
             force "com.carrotsearch.randomizedtesting:randomizedtesting-runner:${versions.randomizedrunner}"
             force "junit:junit:${versions.junit}"
             force "org.slf4j:slf4j-api:${versions.slf4j}"
-            //force "org.slf4j:slf4j-log4j12:${versions.slf4j}"
+            force "org.slf4j:slf4j-log4j12:${versions.slf4j_log4j12}"
             force "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
             force "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${versions.jackson}"
             force "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
@@ -61,7 +61,7 @@ allprojects {
             force "org.apache.httpcomponents:httpcore:${versions.httpcore}"
             force "org.apache.httpcomponents:httpcore-nio:${versions.httpcore}"
             force "org.apache.httpcomponents:httpclient:${versions.httpclient}"
-            //force "log4j:log4j:${versions.log4j}"
+            force "log4j:log4j:${versions.log4j}"
             force "io.netty:netty:${versions.netty}"
             force 'net.sf.jopt-simple:jopt-simple:5.0.2'
 
@@ -69,8 +69,14 @@ allprojects {
             // https://crate.io/docs/reference/en/latest/sql/snapshot_restore.html
             force "org.codehaus.jackson:jackson-core-asl:${versions.jacksonasl}"
             force "org.codehaus.jackson:jackson-mapper-asl:${versions.jacksonasl}"
+            force "org.codehaus.jackson:jackson-jaxrs:${versions.jackson_jaxrs}"
+            force "org.codehaus.jackson:jackson-xc:${versions.jackson_xc}"
             force "com.google.code.findbugs:jsr305:${versions.jsr305}"
             force "commons-lang:commons-lang:2.6"
+            force "commons-collections:commons-collections:${versions.commonscollections}"
+            force "org.apache.logging.log4j:log4j-1.2-api:${versions.apache_log4j}"
+            force "org.apache.logging.log4j:log4j-api:${versions.apache_log4j}"
+            force "org.apache.logging.log4j:log4j-core:${versions.apache_log4j}"
         }
     }
 }
