--- a/gradle/version.properties
+++ b/gradle/version.properties
@@ -5,21 +5,29 @@ jodatime=2.9.5
 commonscli=1.3.1
 commonsmath=3.6.1
 commonslang3=3.5
+commonscollections=3.2.2
 netty=3.10.6.Final
 jsr305=3.0.1
 aws=1.10.69
 jacksonasl=1.9.13
 elasticsearchhadoop=2.4.0
+slf4j_log4j12=1.7.10
+jackson_jaxrs=1.9.13
+jackson_xc=1.9.13
 
 # ES deps
 elasticsearch=5.0.1
 lucene=6.2.1
 
+# ES HDFS
+hadoop2=2.7.1
+apache_log4j=2.6.2
+
 # ES optional
 spatial4j=0.6
 jts=1.13
 jackson=2.8.1
-log4j=2.6.2
+log4j=1.2.7
 slf4j=1.6.2
 jna=4.2.2
 
